feat: 2.0版本初步适配JDK 1.8